--- a/programs/clmm/Cargo.toml
+++ b/programs/clmm/Cargo.toml
@@ -19,4 +19,5 @@ idl-build = ["anchor-lang/idl-build","anchor-spl/idl-build"]
 
 [dependencies]
 anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
+bytemuck = { version = "1.14", features = ["derive"] } 
 anchor-spl = "0.31.1"
